--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
-    <script src="./assets/js/slick.js"></script>
+    <script src="./assets/js/script.js"></script>
 </head>
 <body>
     <div class="app">
@@ -307,7 +307,7 @@
                 </div>
             </div>
         </footer>
-        <a href="#top" class="scrollUp"></a>
+        <a href="#top" class="scrollUp" id="return-to-top"></a>
     </div>
 </body>
 </html>
